--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
 
 <body>
   <div class="wrapper">
+    <h2><a href="https://tableconvert.com/excel-to-json" target="_blank">excel工具</a></h2>
     <h2>json格式化工具</h2>
     <hr>
     <div class="condition">
